--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
 	<h1 style="margin-top: 0em">Professional Services</h1><be>
 
 	<div>
-        <h2><hr><a name="Organizing Committee Member"></a>Organizing Committee Member:</h2>
+        <h2><hr><a name="Conference Organizing Committee Member"></a>Conference Organizing Committee Member:</h2>
         <ul>
 		        <li><p> The 4th International Conference on Computer Vision, Application and Algorithm (CVAA 2024) </p></li>
 			<li><p> 2024 4th International Conference on Computer Graphics, Image and Virtualization (ICCGIV 2024) </p></li>
