--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[May 2024] Invited to serve as an expert reviewer for ICIP'24. </p></li>
 		   <li><p>[Apr 2024] Invited to serve as a program committee member for 2024 IEEE International Conference on Image Processing (ICIP 2024). </p></li>
 		   <li><p>[Apr 2024] Invited to serve as an expert reviewer for ACM MM'24. </p></li>
 		   <li><p>[Apr 2024] Invited to serve as an expert reviewer for PLoS One. </p></li>
