--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[May 2024] Invited to serve as an expert reviewer for NeurIPS'24. </p></li>
 		   <li><p>[May 2024] Invited to serve as an expert reviewer for ICIPW'24. </p></li>
 		   <li><p>[Apr 2024] Invited to serve as a program committee member for 2024 IEEE International Conference on Image Processing Workshop (ICIPW 2024). </p></li>
 		   <li><p>[Apr 2024] Invited to serve as an expert reviewer for ACM MM'24. </p></li>
