--- a/news.html
+++ b/news.html
@@ -23,8 +23,9 @@
 
 	<div>
         <ul>
-		   <li><p>[May 2024] Invited to serve as an expert reviewer for ICIP'24. </p></li>
-		   <li><p>[Apr 2024] Invited to serve as a program committee member for 2024 IEEE International Conference on Image Processing (ICIP 2024). </p></li>
+		   <li><p>[May 2024] Invited to serve as an expert reviewer for NeurIPS'24. </p></li>
+		   <li><p>[May 2024] Invited to serve as an expert reviewer for ICIPW'24. </p></li>
+		   <li><p>[Apr 2024] Invited to serve as a program committee member for 2024 IEEE International Conference on Image Processing WorkShop (ICIPW 2024). </p></li>
 		   <li><p>[Apr 2024] Invited to serve as an expert reviewer for ACM MM'24. </p></li>
 		   <li><p>[Apr 2024] Invited to serve as an expert reviewer for PLoS One. </p></li>
 		   <li><p>[Mar 2024] Invited to serve as an organizing committee member for The 4th International Conference on Computer Vision, Application and Algorithm (CVAA 2024). </p></li>
