--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@ Application of learning algorithms in person re-identification, image retrieval,
 	<li><p style="margin:15px 0">
 	    <b>Xin Yuan</b>, Xin Xu, Xiao Wang, Liang Liao, Kai Zhang, Zheng Wang, Chia-Wen Lin.<br>
             OSAP-Loss: Efficient Optimization of Average Precision via Involving Samples after Positive Ones Towards Remote Sensing Image Retrieval.<br>
-            <i>CAAI Transactions on Intelligence Technology</i>, pp. 1-22, 2023.<br>
+            <i>CAAI Transactions on Intelligence Technology</i>, vol. 8, no. 4, pp. 1191-1212, 2023.<br>
         </p></li>
         <li><p style="margin:15px 0">
             Xin Xu, <b>Xin Yuan</b>, Zheng Wang, Kai Zhang, Ruimin Hu.<br>
