--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
 <!--</ul>-->
 <ul>
 <li><p><b>Theory:</b><br>
-Analysis and understandings of the generalization ability of various loss functions.</p></li>
+Analysis and understanding of the generalization ability of various loss functions.</p></li>
 <li><p><b>Algorithm:</b><br>
 Development of effective deep learning algorithms for person re-identification and image retrieval.</p></li>
 <li><p><b>Application:</b><br>
@@ -44,7 +44,7 @@ Application of learning algorithms in person re-identification, image retrieval,
 	<li><p style="margin:15px 0">
 	    Wanyu Wu, Wei Wang, <b>Xin Yuan</b>, Xin Xu.<br>
             LIMPID: A Lightweight Image-to-Curve MaPpIng moDel for Extremely Low-Light Image Enhancement.<br>
-            <i>Photonics</i>, 10, no. 3: 273, 2023.<br>
+            <i>Photonics</i>, vol. 10, no. 3: 273, 2023.<br>
         </p></li>
 	<li><p style="margin:15px 0">
 	    <b>Xin Yuan</b>, Xin Xu, Zheng Wang, Kai Zhang, Wei Liu, Ruimin Hu.<br>
