--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Jun 2024] Invited to serve as an expert reviewer for Big Data Research. </p></li>
 		   <li><p>[May 2024] Invited to serve as an expert reviewer for NeurIPS'24. </p></li>
 		   <li><p>[May 2024] Invited to serve as an expert reviewer for ICIPW'24. </p></li>
 		   <li><p>[Apr 2024] Invited to serve as a program committee member for 2024 IEEE International Conference on Image Processing Workshop (ICIPW 2024). </p></li>
