--- a/services.html
+++ b/services.html
@@ -49,7 +49,8 @@
 			<li><p> IEEE Journal of Selected Topics in Signal Processing (IEEE J-STSP) </p></li>
 		        <li><p> Information Sciences (INS) </p></li>
 		        <li><p> Journal of Visual Communication and Image Representation (JVCI) </p></li>
-		        <li><p> Neural Computing and Applications (NCAA) </p></li>   
+		        <li><p> Neural Computing and Applications (NCAA) </p></li> 
+		        <li><p> Big Data Research </p></li>
 		        <li><p> Visual Intelligence </p></li>
 		        <li><p> PLoS One </p></li>
         </ul>
