--- a/research.html
+++ b/research.html
@@ -42,6 +42,11 @@ Application of learning algorithms in person re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+	    Hengwei Li, Wei Wang, Xiao Wang, <b>Xin Yuan</b>, Xin Xu.<br>
+            Blind 3D Video Stabilization with Spatio-Temporally Varying Motion Blur.<br>
+            <i>Accepted</i>.<br>
+        </p></li>
+	<li><p style="margin:15px 0">
 	    Wanyu Wu, Wei Wang, <b>Xin Yuan</b>, Xin Xu.<br>
             LIMPID: A Lightweight Image-to-Curve MaPpIng moDel for Extremely Low-Light Image Enhancement.<br>
             <i>Photonics</i>, vol. 10, no. 3, p. 273, 2023.<br>
