--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@ Application of learning algorithms in person re-identification, image retrieval,
 	<li><p style="margin:15px 0">
 	    Hengwei Li, Wei Wang, Xiao Wang, <b>Xin Yuan</b>, Xin Xu.<br>
             Blind 3D Video Stabilization with Spatio-Temporally Varying Motion Blur.<br>
-            <i>ACM Transactions on Multimedia Computing, Communications, and Applications</i>, <b>Accepted</b>.<br>
+            <i>ACM Transactions on Multimedia Computing, Communications, and Applications, <b>Accepted</b></i>.<br>
         </p></li>
 	<li><p style="margin:15px 0">
 	    Wanyu Wu, Wei Wang, <b>Xin Yuan</b>, Xin Xu.<br>
