--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[Aug 2024] Invited to serve as an expert reviewer for Displays. </p></li>
 		   <li><p>[Jul 2024] One paper was accepted by ACM Transactions on Multimedia Computing, Communications, and Applications (ACM TOMM). </p></li>
 		   <li><p>[Jun 2024] Invited to serve as an expert reviewer for Big Data Research. </p></li>
 		   <li><p>[May 2024] Invited to serve as an expert reviewer for NeurIPS'24. </p></li>
