--- a/services.html
+++ b/services.html
@@ -50,6 +50,7 @@
 		        <li><p> Information Sciences (INS) </p></li>
 		        <li><p> Journal of Visual Communication and Image Representation (JVCI) </p></li>
 		        <li><p> Neural Computing and Applications (NCAA) </p></li> 
+		        <li><p> Displays </li>
 		        <li><p> Big Data Research </p></li>
 		        <li><p> Visual Intelligence </p></li>
 		        <li><p> PLoS One </p></li>
