--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Sep 2024] One paper was accepted by The Visual Computer (TVC). </p></li>
 		   <li><p>[Aug 2024] Invited to serve as an expert reviewer for ICLR'25. </p></li>
 		   <li><p>[Aug 2024] Invited to serve as an expert reviewer for Displays. </p></li>
 		   <li><p>[Jul 2024] One paper was accepted by ACM Transactions on Multimedia Computing, Communications, and Applications (ACM TOMM). </p></li>
