--- a/research.html
+++ b/research.html
@@ -42,6 +42,11 @@ Application of learning algorithms in person re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+	    Xiaopan Li, Shiqian Wu, </b>Xin Yuan</b>, Shoulie Xie, Sos Agaian.<br>
+            Hierarchical Wavelet-Guided Diffusion Model for Single Image Deblurring.<br>
+            <i>The Visual Computer, <b>Accepted</b></i>, 2024.<br>
+        </p></li>    
+	<li><p style="margin:15px 0">
 	    Hengwei Li, Wei Wang, Xiao Wang, <b>Xin Yuan</b>, Xin Xu.<br>
             Blind 3D Video Stabilization with Spatio-Temporally Varying Motion Blur.<br>
             <i>ACM Transactions on Multimedia Computing, Communications, and Applications, <b>Accepted</b></i>, 2024.<br>
