--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@ Application of learning algorithms in person re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
-	    Xiaopan Li, Shiqian Wu, </b>Xin Yuan</b>, Shoulie Xie, Sos Agaian.<br>
+	    Xiaopan Li, Shiqian Wu, <b>Xin Yuan</b>, Shoulie Xie, Sos Agaian.<br>
             Hierarchical Wavelet-Guided Diffusion Model for Single Image Deblurring.<br>
             <i>The Visual Computer, <b>Accepted</b></i>, 2024.<br>
         </p></li>    
