--- a/services.html
+++ b/services.html
@@ -22,6 +22,13 @@
 	<h1 style="margin-top: 0em">Professional Services</h1><be>
 
 	<div>
+        <h2><hr><a name="Young Computer Scientists & Engineers Forum Committee Member"></a>Young Computer Scientists & Engineers Forum Committee Member:</h2>
+        <ul>
+		        <li><p> CCF Wuhan Young Computer Scientists & Engineers Forum (CCF Wuhan YOCSEF) </p></li>
+        </ul>
+	</div>
+		
+	<div>
         <h2><hr><a name="Conference Organizing Committee Member"></a>Conference Organizing Committee Member:</h2>
         <ul>
 		        <li><p> The 4th International Conference on Computer Vision, Application and Algorithm (CVAA 2024) </p></li>
