--- a/services.html
+++ b/services.html
@@ -44,6 +44,7 @@
 			<li><p> AAAI Conference on Artificial Intelligence (AAAI): 2023, 2024 </p></li>
 		        <li><p> ACM International Conference on Multimedia (ACM MM): 2024 </p></li>
 		        <li><p> IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP): 2025 </p></li>
+		        <li><p> International Conference on Artificial Intelligence and Statistics (AISTATS): 2025 </p></li>
 		        <li><p> IEEE International Conference on Image Processing Workshop (ICIPW): 2024 </p></li>
 		        <li><p> China Automation Congress (CAC): 2023 </p></li>
         </ul>
