--- a/services.html
+++ b/services.html
@@ -53,6 +53,7 @@
 	<div>
         <h2><hr><a name="Reviewer"></a>Journal Reviewer:</h2>
         <ul>
+		        <li><p> IEEE Transactions on Image Processing (IEEE T-IP) </p></li>
 		        <li><p> IEEE Transactions on Information Forensics & Security (IEEE T-IFS) </p></li>
 		        <li><p> IEEE Transactions on Multimedia (IEEE T-MM) </p></li>
 		        <li><p> IEEE Transactions on Circuits and Systems for Video Technology (IEEE T-CSVT) </p></li>
