--- a/services.html
+++ b/services.html
@@ -21,6 +21,13 @@
 
 	<h1 style="margin-top: 0em">Professional Services</h1><be>
 
+        <div>
+        <h2><hr><a name="Guest Editor"></a>Guest Editor:</h2>
+        <ul>
+		        <li><p> Electronics </p></li>
+        </ul>
+	</div>
+	
 	<div>
         <h2><hr><a name="Young Computer Scientists & Engineers Forum Committee Member"></a>Young Computer Scientists & Engineers Forum Committee Member:</h2>
         <ul>
