--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[Nov 2024] Invited to serve as a guest editor for ICML'25. </p></li>
 		   <li><p>[Nov 2024] Invited to serve as a guest editor for Electronics. </p></li>
 		   <li><p>[Oct 2024] Invited to serve as an expert reviewer for IEEE Transactions on Image Processing (IEEE T-IP). </p></li>
 		   <li><p>[Oct 2024] Invited to serve as an expert reviewer for AISTATS'25. </p></li>
