--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Dec 2024] Invited to serve as a guest editor for ICML'25. </p></li>
 		   <li><p>[Nov 2024] Invited to serve as a guest editor for Electronics. </p></li>
 		   <li><p>[Oct 2024] Invited to serve as an expert reviewer for IEEE Transactions on Image Processing (IEEE T-IP). </p></li>
 		   <li><p>[Oct 2024] Invited to serve as an expert reviewer for AISTATS'25. </p></li>
