--- a/research.html
+++ b/research.html
@@ -42,6 +42,11 @@ Application of learning algorithms in person re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+	    Yiru Zheng, Wei Wang, Xiao Wang, <b>Xin Yuan</b>.<br>
+            RLUNet: Overexposure-Content-Recovery-Based Single HDR Image Reconstruction with the Imaging Pipeline Principle.<br>
+            <i>Applied Sciences, <b>Accepted</b></i>, 2024.<br>
+        </p></li>    
+	<li><p style="margin:15px 0">
 	    Xiaopan Li, Shiqian Wu, <b>Xin Yuan</b>, Shoulie Xie, Sos Agaian.<br>
             Hierarchical Wavelet-Guided Diffusion Model for Single Image Deblurring.<br>
             <i>The Visual Computer, <b>Accepted</b></i>, 2024.<br>
