--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@
         <h1 style="margin-top: 0em">Research</h1><br>
 
 <!--<ul>-->
-<p>My general research interests lie in person re-identification, image retrieval, and deep metric learning, with a particular emphasis on the following topics:</p>
+<p>My general research interests lie in object re-identification, image retrieval, and deep metric learning, with a particular emphasis on the following topics:</p>
 <!--</ul>-->
 <ul>
 <li><p><b>Theory:</b><br>
