--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Dec 2024] One paper was accepted by IEEE Signal Processing Letters (IEEE SPL). </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by Applied Sciences. </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for ICML'25. </p></li>
 		   <li><p>[Nov 2024] Invited to serve as a guest editor for Electronics. </p></li>
