--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[Dec 2024] One paper was accepted by IJCNN'25. </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by IEEE Signal Processing Letters (IEEE SPL). </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by Applied Sciences. </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for ICML'25. </p></li>
