--- a/research.html
+++ b/research.html
@@ -42,6 +42,16 @@ Application of learning algorithms in person re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+	    Zhongyang Li, <b>Xin Yuan*</b>, Wei Liu, Xin Xu.<br>
+            VAGeo: View-specific Attention for Cross-View Object Geo-Localization.<br>
+            <i>Proceedings of the International Conference on Acoustics, Speech and Signal Processing (<b>ICASSP'25</b>)</i>, <b>Accepted</b></i>, 2025.<br>
+        </p></li> 
+	<li><p style="margin:15px 0">
+	    Renkai Li, <b>Xin Yuan*</b>, Wei Liu, Xin Xu.<br>
+            Event-based Video Person Re-identification via Modality Alignment.<br>
+            <i>Proceedings of the International Conference on Acoustics, Speech and Signal Processing (<b>ICASSP'25</b>)</i>, <b>Accepted</b></i>, 2025.<br>
+        </p></li> 
+	<li><p style="margin:15px 0">
 	    Jialin Zhang, Xiao Wang, <b>Xin Yuan</b>, Nan Mu, Zheng Wang.<br>
             Spatial Bi-Exploration for Robust Camouflaged Object Detection.<br>
             <i>IEEE Signal Processing Letters, <b>Accepted</b></i>, 2024.<br>
@@ -84,7 +94,7 @@ Application of learning algorithms in person re-identification, image retrieval,
 	<li><p style="margin:15px 0">
             Xiang Shuai, Xiao Wang, Wei Wang, <b>Xin Yuan</b>, Xin Xu.<br>
             SAM: Self Attention Mechanism for Scene Text Recognition based on Swin Transformer.<br>
-	    <i>Proceedings of the 28th International Conference on Multimedia Modeling (<b>MMM'22</b>)</i>, pp. 443–454, 2022.<br>
+	    <i>Proceedings of the International Conference on Multimedia Modeling (<b>MMM'22</b>)</i>, pp. 443–454, 2022.<br>
          </p></li>
     </ul>
 
