--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Dec 2024] One paper was accepted by ACM Transactions on Multimedia Computing, Communications, and Applications (ACM TOMM). </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for The Journal of Supercomputing (TJS). </p></li>
 		   <li><p>[Dec 2024] Two paper were accepted by ICASSP'25. </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for IJCNN'25. </p></li>
