--- a/research.html
+++ b/research.html
@@ -42,6 +42,11 @@ Application of learning algorithms in person re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+            Wei Liu, Xin Xu, Hua Chang, <b>Xin Yuan</b>, Zheng Wang.<br>
+            Mix-Modality Person Re-Identification: A New and Practical Paradigm.<br>
+            <i>ACM Transactions on Multimedia Computing, Communications, and Applications</i>, <b>Accepted</b></i>, 2025.<br>
+        </p></li>
+	<li><p style="margin:15px 0">
 	    Zhongyang Li, <b>Xin Yuan*</b>, Wei Liu, Xin Xu.<br>
             VAGeo: View-specific Attention for Cross-View Object Geo-Localization.<br>
             <i>Proceedings of the International Conference on Acoustics, Speech and Signal Processing (<b>ICASSP'25</b>)</i>, <b>Accepted</b></i>, 2025.<br>
