--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Scientific Reports (Sci Rep). </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by ACM Transactions on Multimedia Computing, Communications, and Applications (ACM TOMM). </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for The Journal of Supercomputing (TJS). </p></li>
 		   <li><p>[Dec 2024] Two paper were accepted by ICASSP'25. </p></li>
