--- a/services.html
+++ b/services.html
@@ -73,6 +73,7 @@
 		        <li><p> Journal of Visual Communication and Image Representation (JVCI) </p></li>
 		        <li><p> Neural Computing and Applications (NCAA) </p></li> 
 		        <li><p> The Journal of Supercomputing (TJS) </p></li> 
+		        <li><p> Multimedia Systems </p></li> 
 		        <li><p> Big Data Research </p></li>
 		        <li><p> Visual Intelligence </p></li>
 		        <li><p> PLoS One </p></li>
