--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Scientific Reports (Sci Rep). </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by ACM Transactions on Multimedia Computing, Communications, and Applications (ACM TOMM). </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for The Journal of Supercomputing (TJS). </p></li>
-		   <li><p>[Dec 2024] Two paper were accepted by ICASSP'25. </p></li>
+		   <li><p>[Dec 2024] Two papers were accepted by ICASSP'25. </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for IJCNN'25. </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by IEEE Signal Processing Letters (IEEE SPL). </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by Applied Sciences. </p></li>
