--- a/research.html
+++ b/research.html
@@ -29,9 +29,9 @@
 <li><p><b>Theory:</b><br>
 Analysis and understanding of the generalization ability of various loss functions.</p></li>
 <li><p><b>Algorithm:</b><br>
-Development of effective deep learning algorithms for person re-identification and image retrieval.</p></li>
+Development of effective deep learning algorithms for object re-identification and image retrieval.</p></li>
 <li><p><b>Application:</b><br>
-Application of learning algorithms in person re-identification, image retrieval, and deep metric learning.</p></li>
+Application of learning algorithms in object re-identification, image retrieval, and deep metric learning.</p></li>
 </ul>
 <p>Feel free to drop me an email if you are interested in collaborating with me on the above research topics.</p>
 
