--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[Jan 2025] Invited to serve as an academic committee for CCF Wuhan YOCSEF. </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Multimedia Systems. </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Scientific Reports (Sci Rep). </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by ACM Transactions on Multimedia Computing, Communications, and Applications (ACM TOMM). </p></li>
@@ -71,7 +72,6 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 		   <li><p>[Oct 2024] Invited to serve as an expert reviewer for IEEE Transactions on Image Processing (IEEE T-IP). </p></li>
 		   <li><p>[Oct 2024] Invited to serve as an expert reviewer for AISTATS'25. </p></li>
 		   <li><p>[Sep 2024] Invited to serve as an expert reviewer for ICASSP'25. </p></li>
-		   <li><p>[Sep 2024] Invited to serve as a committee member for CCF Wuhan YOCSEF. </p></li>
 		   <li><p>[Sep 2024] One paper was accepted by The Visual Computer (TVC). </p></li>
 		   <li><p>[Aug 2024] Invited to serve as an expert reviewer for ICLR'25. </p></li>
 		   <li><p>[Aug 2024] Invited to serve as an expert reviewer for Displays. </p></li>
