--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Jan 2025] Invited to serve as an academic committee for CCF YOCSEF (Wuhan). </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Multimedia Systems. </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Scientific Reports (Sci Rep). </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by ACM Transactions on Multimedia Computing, Communications, and Applications (ACM TOMM). </p></li>
@@ -36,7 +37,6 @@
 		   <li><p>[Oct 2024] Invited to serve as an expert reviewer for IEEE Transactions on Image Processing (IEEE T-IP). </p></li>
 		   <li><p>[Oct 2024] Invited to serve as an expert reviewer for AISTATS'25. </p></li>
 		   <li><p>[Sep 2024] Invited to serve as an expert reviewer for ICASSP'25. </p></li>
-		   <li><p>[Sep 2024] Invited to serve as a committee member for CCF Wuhan YOCSEF. </p></li>
 		   <li><p>[Sep 2024] One paper was accepted by The Visual Computer (TVC). </p></li>
 		   <li><p>[Aug 2024] Invited to serve as an expert reviewer for ICLR'25. </p></li>
 		   <li><p>[Aug 2024] Invited to serve as an expert reviewer for Displays. </p></li>
