--- a/services.html
+++ b/services.html
@@ -29,9 +29,9 @@
 	</div>
 	
 	<div>
-        <h2><hr><a name="Young Computer Scientists & Engineers Forum Committee Member"></a>Young Computer Scientists & Engineers Forum Committee Member:</h2>
+        <h2><hr><a name="Young Computer Scientists & Engineers Forum Academic Committee"></a>Young Computer Scientists & Engineers Forum Academic Committee:</h2>
         <ul>
-		        <li><p> CCF Wuhan Young Computer Scientists & Engineers Forum (CCF Wuhan YOCSEF) </p></li>
+		        <li><p> CCF Young Computer Scientists & Engineers Forum (Wuhan) (CCF YOCSEF Wuhan) </p></li>
         </ul>
 	</div>
 		
