--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@ Application of learning algorithms in object re-identification, image retrieval,
         </p></li> 
 	<li><p style="margin:15px 0">
 	    Renkai Li, <b>Xin Yuan*</b>, Wei Liu, Xin Xu.<br>
-            Event-based Video Person Re-identification via Modality Alignment.<br>
+            Event-based Video Person Re-identification via Cross-Modality and Temporal Collaboration.<br>
             <i>Proceedings of the International Conference on Acoustics, Speech and Signal Processing (<b>ICASSP'25</b>)</i>, <b>Accepted</b></i>, 2025.<br>
         </p></li> 
 	<li><p style="margin:15px 0">
