--- a/services.html
+++ b/services.html
@@ -67,6 +67,7 @@
 		        <li><p> IEEE Transactions on Multimedia (IEEE T-MM) </p></li>
 		        <li><p> IEEE Transactions on Circuits and Systems for Video Technology (IEEE T-CSVT) </p></li>
 			<li><p> IEEE Journal of Selected Topics in Signal Processing (IEEE J-STSP) </p></li>
+		        <li><p> Transactions on Machine Learning Research (TMLR) </p></li>
 		        <li><p> Information Sciences (INS) </p></li>
 		        <li><p> Scientific Reports (Sci Rep) </p></li>
 		        <li><p> Displays </p></li> 
