--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Jan 2025] One paper was accepted by Sensors. </p></li>
 		   <li><p>[Jan 2025] Invited to serve as an expert reviewer for Transactions on Machine Learning Research (TMLR). </p></li>
 		   <li><p>[Jan 2025] Invited to serve as an academic committee for CCF YOCSEF (Wuhan). </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Multimedia Systems. </p></li>
