--- a/research.html
+++ b/research.html
@@ -42,6 +42,11 @@ Application of learning algorithms in object re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+            <b>Xin Yuan</b>, Ying He, Guozhu Hao.<br>
+            Identity Hides in Darkness: Learning Feature Discovery Transformer for Nighttime Person Re-identification.<br>
+            <i>Sensors</i>, <b>Accepted</b></i>, 2025.<br>
+        </p></li>
+	<li><p style="margin:15px 0">
             Wei Liu, Xin Xu, Hua Chang, <b>Xin Yuan</b>, Zheng Wang.<br>
             Mix-Modality Person Re-Identification: A New and Practical Paradigm.<br>
             <i>ACM Transactions on Multimedia Computing, Communications, and Applications</i>, <b>Accepted</b></i>, 2025.<br>
