--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
     <h2><hr><a name="Honors"></a>Honors &amp; Awards</h2>
         <ul>
+		        <li><p>[2025] Best Researcher Award. </p></li>
 		        <li><p>[2023] Hubei Youth May Fourth Medal. </p></li>
 		        <li><p>[2023] Scholarship of People's Daily Online. </p></li>
 		        <li><p>[2023] 17th Annual College Student in China. </p></li>
