--- a/news.html
+++ b/news.html
@@ -23,8 +23,10 @@
 
 	<div>
         <ul>
+		   <li><p>[Feb 2025] One publication was selected for the "Best Researcher Award". </p></li>
 		   <li><p>[Jan 2025] One paper was accepted by Sensors. </p></li>
 		   <li><p>[Jan 2025] Invited to serve as an expert reviewer for Transactions on Machine Learning Research (TMLR). </p></li>
+		   <li><p>[Jan 2025] One project was approved by Nature Science Foundation of Hubei Province. </p></li>
 		   <li><p>[Jan 2025] Invited to serve as an academic committee for CCF YOCSEF (Wuhan). </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Multimedia Systems. </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Scientific Reports (Sci Rep). </p></li>
