--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Feb 2025] Invited to serve as an expert reviewer for NeurIPS'25. </p></li>
 		   <li><p>[Feb 2025] Invited to serve as an expert reviewer for ACM MM'25. </p></li>
 		   <li><p>[Feb 2025] Invited to serve as an expert reviewer for ICIP'25. </p></li>
 		   <li><p>[Feb 2025] One publication was selected for the "Best Researcher Award". </p></li>
