--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
         <ul>
 		        <li><p> International Conference on Machine Learning (ICML): 2025 </p></li>
 		        <li><p> International Conference on Learning Representations (ICLR): 2025 </p></li>
-		        <li><p> Annual Conference on Neural Information Processing Systems (NeurIPS): 2024 </p></li>
+		        <li><p> Annual Conference on Neural Information Processing Systems (NeurIPS): 2024, 2025 </p></li>
 			<li><p> AAAI Conference on Artificial Intelligence (AAAI): 2023, 2024 </p></li>
 		        <li><p> ACM International Conference on Multimedia (ACM MM): 2024, 2025 </p></li>
 		        <li><p> IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP): 2025 </p></li>
