--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   an editorial board member for the "The British Journal of Sports Medicine"
 		   <li><p>[Feb 2025] Invited to serve as an expert reviewer for NeurIPS'25. </p></li>
 		   <li><p>[Feb 2025] Invited to serve as an expert reviewer for ACM MM'25. </p></li>
 		   <li><p>[Feb 2025] Invited to serve as an expert reviewer for ICIP'25. </p></li>
