--- a/services.html
+++ b/services.html
@@ -27,6 +27,13 @@
 		        <li><p> Electronics </p></li>
         </ul>
 	</div>
+
+	<div>
+        <h2><hr><a name="Aditorial Board Member"></a>Aditorial Board Member:</h2>
+        <ul>
+		        <li><p> The British Journal of Sports Medicine (BJSM) </p></li>
+        </ul>
+	</div>
 	
 	<div>
         <h2><hr><a name="Young Computer Scientists & Engineers Forum Academic Committee"></a>Young Computer Scientists & Engineers Forum Academic Committee:</h2>
