--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Mar 2025] Invited to serve as an expert reviewer for MultiMedia Tools and Applications (MTAP). </p></li>
 		   <li><p>[Feb 2025] Invited to serve as an editorial board member for The British Journal of Sports Medicine (BJSM). </p></li>
 		   <li><p>[Feb 2025] Invited to serve as an expert reviewer for NeurIPS'25. </p></li>
 		   <li><p>[Feb 2025] Invited to serve as an expert reviewer for ACM MM'25. </p></li>
