--- a/services.html
+++ b/services.html
@@ -58,6 +58,7 @@
 		        <li><p> Annual Conference on Neural Information Processing Systems (NeurIPS): 2024, 2025 </p></li>
 			<li><p> AAAI Conference on Artificial Intelligence (AAAI): 2023, 2024 </p></li>
 		        <li><p> ACM International Conference on Multimedia (ACM MM): 2024, 2025 </p></li>
+		        <li><p> International Joint Conference on Artificial Intelligence (IJCAI): 2025 </p></li>
 		        <li><p> IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP): 2025 </p></li>
 		        <li><p> International Joint Conference on Neural Networks (IJCNN): 2025 </p></li>
 		        <li><p> International Conference on Artificial Intelligence and Statistics (AISTATS): 2025 </p></li>
