--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[Apr 2024] Invited to serve as a guest editor for Sensors. </p></li>
 		   <li><p>[Mar 2025] Invited to serve as an expert reviewer for IJCAI'25. </p></li>
 		   <li><p>[Mar 2025] Invited to serve as an expert reviewer for MultiMedia Tools and Applications (MTAP). </p></li>
 		   <li><p>[Feb 2025] Invited to serve as an editorial board member for The British Journal of Sports Medicine (BJSM). </p></li>
