--- a/services.html
+++ b/services.html
@@ -24,7 +24,8 @@
         <div>
         <h2><hr><a name="Guest Editor"></a>Guest Editor:</h2>
         <ul>
-		        <li><p> Electronics </p></li>
+		        <li><p> Sensors </p></li>
+		        <li><p> Electronics </p></li>      
         </ul>
 	</div>
 
