--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Apr 2025] Invited to serve as an expert reviewer for ICIC'25. </p></li>
 		   <li><p>[Apr 2025] Invited to serve as a guest editor for Sensors. </p></li>
 		   <li><p>[Mar 2025] Invited to serve as an expert reviewer for IJCAI'25. </p></li>
 		   <li><p>[Mar 2025] Invited to serve as an expert reviewer for MultiMedia Tools and Applications (MTAP). </p></li>
