--- a/services.html
+++ b/services.html
@@ -64,6 +64,7 @@
 		        <li><p> International Joint Conference on Neural Networks (IJCNN): 2025 </p></li>
 		        <li><p> International Conference on Artificial Intelligence and Statistics (AISTATS): 2025 </p></li>
 		        <li><p> International Conference on Image Processing (ICIP): 2025 </p></li>
+		        <li><p> International Conference on Intelligent Computing (ICIC): 2025 </p></li>
 		        <li><p> IEEE International Conference on Image Processing Workshop (ICIPW): 2024 </p></li>
 		        <li><p> China Automation Congress (CAC): 2023 </p></li>
         </ul>
