--- a/research.html
+++ b/research.html
@@ -42,6 +42,11 @@ Application of learning algorithms in object re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+            Kun Qian, Wei Liu, Minshi Chen, Xiao Wang, <b>Xin Yuan</b>.<br>
+            RPUDet: Learning Relational Prior and Uncertainty for Robust Aerial Object Detection.<br>
+            <i>Proceedings of the ACM International Conference on Multimedia Retrieval (<b>ICMR'25</b>)</i>, <b>Accepted</b></i>, 2025.<br>
+        </p></li>
+	<li><p style="margin:15px 0">
             <b>Xin Yuan</b>, Ying He, Guozhu Hao.<br>
             Identity Hides in Darkness: Learning Feature Discovery Transformer for Nighttime Person Re-identification.<br>
             <i>Sensors</i>, <b>Accepted</b></i>, 2025.<br>
