--- a/research.html
+++ b/research.html
@@ -41,6 +41,12 @@ Application of learning algorithms in object re-identification, image retrieval,
     <h2><hr>Publications</h2>
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
+	</p></li>
+	<li><p style="margin:15px 0">
+             Ke Yang, Xiao Wang, Wei Wang, <b>Xin Yuan</b>, Xin Xu.<br>
+            SEANet: Semantic Enhancement and Amplification for Underwater Object Detection in Complex Visual Scenarios.<br>
+            <i>Sensors</i>, <b>Accepted</b></i>, 2025.<br>
+        </p></li>
 	<li><p style="margin:15px 0">
             Kun Qian, Wei Liu, Minshi Chen, Xiao Wang, <b>Xin Yuan</b>.<br>
             RPUDet: Learning Relational Prior and Uncertainty for Robust Aerial Object Detection.<br>
