--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[May 2025] Invited to serve as an expert reviewer for IEEE SMC'25. </p></li>
 		   <li><p>[May 2025] One paper was accepted by Sensors. </p></li>
 		   <li><p>[Apr 2025] One paper was accepted by ICMR'25. </p></li>
 		   <li><p>[Apr 2025] Invited to serve as an expert reviewer for ICIC'25. </p></li>
