--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   
+                   <li><p>[May 2025] Invited to serve as an expert reviewer for IEEE GRSL. </p></li>
 		   <li><p>[May 2025] Invited to serve as an expert reviewer for IEEE SMC'25. </p></li>
 		   <li><p>[May 2025] One paper was accepted by Sensors. </p></li>
 		   <li><p>[Apr 2025] One paper was accepted by ICMR'25. </p></li>
