--- a/services.html
+++ b/services.html
@@ -83,6 +83,7 @@
 		        <li><p> Information Sciences (INS) </p></li>
 		        <li><p> Scientific Reports (Sci Rep) </p></li>
 		        <li><p> Displays </p></li> 
+		        <li><p> IEEE Geoscience and Remote Sensing Letters </p></li> 
 		        <li><p> Journal of Visual Communication and Image Representation (JVCI) </p></li>
 		        <li><p> Neural Computing and Applications (NCAA) </p></li> 
 		        <li><p> MultiMedia Tools and Applications (MTAP) </p></li>
