--- a/services.html
+++ b/services.html
@@ -76,6 +76,7 @@
         <ul>
 		        <li><p> IEEE Transactions on Image Processing (IEEE T-IP) </p></li>
 		        <li><p> IEEE Transactions on Information Forensics & Security (IEEE T-IFS) </p></li>
+		        <li><p> IEEE Transactions on Knowledge and Data Engineering (IEEE T-KDE) </p></li>
 		        <li><p> IEEE Transactions on Multimedia (IEEE T-MM) </p></li>
 		        <li><p> IEEE Transactions on Circuits and Systems for Video Technology (IEEE T-CSVT) </p></li>
 			<li><p> IEEE Journal of Selected Topics in Signal Processing (IEEE J-STSP) </p></li>
