--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Jun 2025] One paper was accepted by IEEE SMC'25. </p></li>
 		   <li><p>[Jun 2025] Invited to serve as an expert reviewer for IEEE T-KDE. </p></li>
 		   <li><p>[May 2025] Invited to serve as an expert reviewer for IEEE GRSL. </p></li>
 		   <li><p>[May 2025] I receive the honor of "National Model of Self-improvement". </p></li>
