--- a/research.html
+++ b/research.html
@@ -41,6 +41,10 @@ Application of learning algorithms in object re-identification, image retrieval,
     <h2><hr>Publications</h2>
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
+	<li><p style="margin:15px 0">
+            Zhaokun He, Chengshuo Zhang, <b>Xin Yuan</b>, Guozhu Hao.<br>
+            AMS-KGNet: F-Adapter Multi-Scale Kernel Gated Network for Low-Light Image Enhancement.<br>
+            <i>Proceedings of the IEEE International Conference on Systems, Man, and Cybernetics (<b>IEEE SMC'25</b>)</i>, <b>Accepted</b></i>, 2025.<br
 	</p></li>
 	<li><p style="margin:15px 0">
             Ke Yang, Xiao Wang, Wei Wang, <b>Xin Yuan</b>, Xin Xu.<br>
