--- a/services.html
+++ b/services.html
@@ -75,6 +75,7 @@
 	<div>
         <h2><hr><a name="Reviewer"></a>Journal Reviewer:</h2>
         <ul>
+		        <li><p> IEEE Transactions on Pattern Analysis and Machine Intelligence (IEEE T-PAMI) </p></li>
 		        <li><p> IEEE Transactions on Image Processing (IEEE T-IP) </p></li>
 		        <li><p> IEEE Transactions on Information Forensics & Security (IEEE T-IFS) </p></li>
 		        <li><p> IEEE Transactions on Knowledge and Data Engineering (IEEE T-KDE) </p></li>
