--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
-		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for IEEE TPAMI. </p><li>
+		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for IEEE TPAMI. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for AAAI'26. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for PRCV'25. </p></li>
                    <li><p>[Jun 2025] One paper was accepted by IEEE SMC'25. </p></li>
