--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
 
 	<div>
         <ul>
-		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for IEEE TPAMI. </p><li>
+		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for IEEE TPAMI. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for AAAI'26. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for PRCV'25. </p></li>
 		   <li><p>[Jun 2025] One paper was accepted by IEEE SMC'25. </p></li>
