--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[Aug 2025] Invited to serve as an expert reviewer for AISTATS'26. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for IEEE T-PAMI. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for AAAI'26. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for PRCV'25. </p></li>
-                   <li><p>[Jun 2025] One paper was accepted by IEEE SMC'25. </p></li>
+           <li><p>[Jun 2025] One paper was accepted by IEEE SMC'25. </p></li>
 		   <li><p>[Jun 2025] Invited to serve as an expert reviewer for IEEE T-KDE. </p></li>
-                   <li><p>[May 2025] Invited to serve as an expert reviewer for IEEE GRSL. </p></li>
+           <li><p>[May 2025] Invited to serve as an expert reviewer for IEEE GRSL. </p></li>
 		   <li><p>[May 2025] I receive the honor of "National Model of Self-improvement". </p></li>
 		   <li><p>[May 2025] Invited to serve as an expert reviewer for IEEE SMC'25. </p></li>
 		   <li><p>[May 2025] One paper was accepted by Sensors. </p></li>
@@ -80,7 +81,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 		   <li><p>[Jan 2025] One paper was accepted by Sensors. </p></li>
 		   <li><p>[Jan 2025] Invited to serve as an expert reviewer for Transactions on Machine Learning Research (TMLR). </p></li>
 		   <li><p>[Jan 2025] One project was approved by Nature Science Foundation of Hubei Province. </p></li>
-		   <li><p>[Jan 2025] Invited to serve as an academic committee for CCF YOCSEF (Wuhan). </p></li>
+		   <li><p>[Jan 2025] Invited to serve as an academic committee member for CCF YOCSEF (Wuhan). </p></li>
         </ul>
 		See more news <a href="https://yuanxincherry.github.io/news.html">here</a>.
 	</div>
