--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Aug 2025] Invited to serve as an expert reviewer for AISTATS'26. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for IEEE T-PAMI. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for AAAI'26. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for PRCV'25. </p></li>
@@ -45,7 +46,7 @@
 		   <li><p>[Jan 2025] One paper was accepted by Sensors. </p></li>
 		   <li><p>[Jan 2025] Invited to serve as an expert reviewer for Transactions on Machine Learning Research (TMLR). </p></li>
 		   <li><p>[Jan 2025] One project was approved by Nature Science Foundation of Hubei Province. </p></li>
-		   <li><p>[Jan 2025] Invited to serve as an academic committee for CCF YOCSEF (Wuhan). </p></li>
+		   <li><p>[Jan 2025] Invited to serve as an academic committee member for CCF YOCSEF (Wuhan). </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Multimedia Systems. </p></li>
 		   <li><p>[Dec 2024] Invited to serve as an expert reviewer for Scientific Reports (Sci Rep). </p></li>
 		   <li><p>[Dec 2024] One paper was accepted by ACM Transactions on Multimedia Computing, Communications, and Applications (ACM TOMM). </p></li>
