--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[Aug 2025] One paper was accepted by Sensors. </p></li>
 		   <li><p>[Aug 2025] Invited to serve as an expert reviewer for AISTATS'26. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for IEEE T-PAMI. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for AAAI'26. </p></li>
