--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@ Application of learning algorithms in object re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
-            Zhaokun He, <b>Xin Yuan*</b>, Guozhu Hao, Wei Wang.<br><b>Xin Yuan*</b>
+            Zhaokun He, <b>Xin Yuan*</b>, Guozhu Hao, Wei Wang.<br>
             Identity Hides in Darkness: Learning Feature Discovery Transformer for Nighttime Person Re-identification.<br>
             <i>Sensors</i>, <b>Accepted</b></i>, 2025.<br>
     </p></li>
