--- a/research.html
+++ b/research.html
@@ -43,13 +43,13 @@ Application of learning algorithms in object re-identification, image retrieval,
     <ul>
 	<li><p style="margin:15px 0">
             Zhaokun He, <b>Xin Yuan*</b>, Guozhu Hao, Wei Wang.<br>
-            Identity Hides in Darkness: Learning Feature Discovery Transformer for Nighttime Person Re-identification.<br>
+            DLFE-Net: Preserving Details and Removing Noise using HVI Color Space for Low-Light Image Enhancement.<br>
             <i>Sensors</i>, <b>Accepted</b></i>, 2025.<br>
     </p></li>
 	<li><p style="margin:15px 0">
             Zhaokun He, Chengshuo Zhang, <b>Xin Yuan*</b>, Guozhu Hao.<br>
             AMS-KGNet: F-Adapter Multi-Scale Kernel Gated Network for Low-Light Image Enhancement.<br>
-            <i>Proceedings of the IEEE International Conference on Systems, Man, and Cybernetics (<b>IEEE SMC'25</b>)</i>, <b>Accepted</b></i>, 2025.<br
+            <i>Proceedings of the IEEE International Conference on Systems, Man, and Cybernetics (<b>IEEE SMC'25</b>)</i>, <b>Accepted</b></i>, 2025.<br>
 	</p></li>
 	<li><p style="margin:15px 0">
             Ke Yang, Xiao Wang, Wei Wang, <b>Xin Yuan</b>, Xin Xu.<br>
