--- a/news.html
+++ b/news.html
@@ -34,6 +34,7 @@
 		   <li><p>[May 2025] I receive the honor of "National Model of Self-improvement". </p></li>
 		   <li><p>[May 2025] Invited to serve as an expert reviewer for IEEE SMC'25. </p></li>
 		   <li><p>[May 2025] One paper was accepted by Sensors. </p></li>
+		   <li><p>[Apr 2025] One paper was accepted by ICIC'25. </p></li>
 		   <li><p>[Apr 2025] One paper was accepted by ICMR'25. </p></li>
 		   <li><p>[Apr 2025] Invited to serve as an expert reviewer for ICIC'25. </p></li>
 		   <li><p>[Apr 2025] Invited to serve as a guest editor for Sensors. </p></li>
