--- a/research.html
+++ b/research.html
@@ -57,6 +57,11 @@ Application of learning algorithms in object re-identification, image retrieval,
             <i>Sensors</i>, <b>Accepted</b></i>, 2025.<br>
         </p></li>
 	<li><p style="margin:15px 0">
+            Haoyu Wang, Wei Wang, Xiao Wang, <b>Xin Yuan</b>, Minshi Chen.<br>
+            Frequency-Guided Wavelet Transformer for Effective Moiré Pattern Removal.<br>
+            <i>Proceedings of the International Conference on Intelligent Computing (<b>ICIC'25</b>)</i>, <b>Accepted</b></i>, 2025.<br>
+        </p></li>
+	<li><p style="margin:15px 0">
             Kun Qian, Wei Liu, Minshi Chen, Xiao Wang, <b>Xin Yuan</b>.<br>
             RPUDet: Learning Relational Prior and Uncertainty for Robust Aerial Object Detection.<br>
             <i>Proceedings of the ACM International Conference on Multimedia Retrieval (<b>ICMR'25</b>)</i>, <b>Accepted</b></i>, 2025.<br>
