--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Sep 2025] Invited to serve as an expert reviewer for MMM'26. </p></li>
 		   <li><p>[Aug 2025] One paper was accepted by Sensors. </p></li>
 		   <li><p>[Aug 2025] Invited to serve as an expert reviewer for AISTATS'26. </p></li>
 		   <li><p>[Jul 2025] Invited to serve as an expert reviewer for IEEE T-PAMI. </p></li>
