--- a/services.html
+++ b/services.html
@@ -64,6 +64,7 @@
 		        <li><p> Chinese Conference on Pattern Recognition and Computer Vision (PRCV): 2025 </p></li> 
 		        <li><p> International Joint Conference on Neural Networks (IJCNN): 2025 </p></li>
 		        <li><p> International Conference on Artificial Intelligence and Statistics (AISTATS): 2025, 2026 </p></li>
+			    <li><p> International Conference on Multimedia Modeling (MMM): 2026 </p></li>
 		        <li><p> International Conference on Image Processing (ICIP): 2025 </p></li>
 		        <li><p> IEEE International Conference on Systems, Man, and Cybernetics (SMC): 2025 </p></li>
 		        <li><p> International Conference on Intelligent Computing (ICIC): 2025 </p></li>
