--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
         <h2><hr><a name="PC"></a>Conference Program Committee Member (Reviewer):</h2>
         <ul>
 		        <li><p> International Conference on Machine Learning (ICML): 2025 </p></li>
-		        <li><p> International Conference on Learning Representations (ICLR): 2025 </p></li>
+		        <li><p> International Conference on Learning Representations (ICLR): 2025, 2026 </p></li>
 		        <li><p> Annual Conference on Neural Information Processing Systems (NeurIPS): 2024, 2025 </p></li>
 			<li><p> AAAI Conference on Artificial Intelligence (AAAI): 2023, 2024, 2025, 2026 </p></li>
 		        <li><p> ACM International Conference on Multimedia (ACM MM): 2024, 2025 </p></li>
