--- a/research.html
+++ b/research.html
@@ -42,6 +42,11 @@ Application of learning algorithms in object re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+            Li Zhang, <b>Xin Yuan*</b>, Minshi Chen, Wei Liu, Zhongyang Li.<br>
+            From Rotation to Fusion: Bidirectional Unsupervised Learning for Cross-View Geo-Localization.<br>
+            <i>Proceedings of the International Conference on Virtual Reality and Visualization (<b>ICVRV'25</b>)</i>, <b>Accepted</b></i>, 2025.<br>
+    </p></li>
+	<li><p style="margin:15px 0">
             Zhaokun He, <b>Xin Yuan*</b>, Guozhu Hao, Wei Wang.<br>
             DLFE-Net: Preserving Details and Removing Noise using HVI Color Space for Low-Light Image Enhancement.<br>
             <i>Sensors</i>, <b>Accepted</b></i>, 2025.<br>
