Fix formatting of conference and journal listings

--- a/services.html
+++ b/services.html
@@ -57,7 +57,7 @@
 		        <li><p> International Conference on Machine Learning (ICML): 2025 </p></li>
 		        <li><p> International Conference on Learning Representations (ICLR): 2025, 2026 </p></li>
 		        <li><p> Annual Conference on Neural Information Processing Systems (NeurIPS): 2024, 2025 </p></li>
-			<li><p> AAAI Conference on Artificial Intelligence (AAAI): 2023, 2024, 2025, 2026 </p></li>
+			    <li><p> AAAI Conference on Artificial Intelligence (AAAI): 2023, 2024, 2025, 2026 </p></li>
 		        <li><p> ACM International Conference on Multimedia (ACM MM): 2024, 2025 </p></li>
 		        <li><p> International Joint Conference on Artificial Intelligence (IJCAI): 2025 </p></li>
 		        <li><p> IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP): 2025 </p></li>
@@ -82,13 +82,14 @@
 		        <li><p> IEEE Transactions on Knowledge and Data Engineering (IEEE T-KDE) </p></li>
 		        <li><p> IEEE Transactions on Multimedia (IEEE T-MM) </p></li>
 		        <li><p> IEEE Transactions on Circuits and Systems for Video Technology (IEEE T-CSVT) </p></li>
-			<li><p> IEEE Journal of Selected Topics in Signal Processing (IEEE J-STSP) </p></li>
+			    <li><p> IEEE Journal of Selected Topics in Signal Processing (IEEE J-STSP) </p></li>
 		        <li><p> Transactions on Machine Learning Research (TMLR) </p></li>
 		        <li><p> Information Sciences (INS) </p></li>
 		        <li><p> Scientific Reports (Sci Rep) </p></li>
 		        <li><p> Displays </p></li> 
 		        <li><p> IEEE Geoscience and Remote Sensing Letters (IEEE GRSL) </p></li> 
 		        <li><p> Journal of Visual Communication and Image Representation (JVCI) </p></li>
+			    <li><p> International Journal for Numerical Methods in Engineering </p></li>
 		        <li><p> Neural Computing and Applications (NCAA) </p></li> 
 		        <li><p> MultiMedia Tools and Applications (MTAP) </p></li>
 		        <li><p> The Journal of Supercomputing (TJS) </p></li> 
