--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Oct 2025] One paper was accepted for MMM'26. </p></li>
 		   <li><p>[Oct 2025] Invited to serve as an expert reviewer for International Journal for Numerical Methods in Engineering. </p></li>
 		   <li><p>[Oct 2025] One paper was accepted by Sensors. </p></li>
 		   <li><p>[Sep 2025] One paper was accepted by ICVRV'25. </p></li>
