--- a/research.html
+++ b/research.html
@@ -42,6 +42,11 @@ Application of learning algorithms in object re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+            Shuai Li, <b>Xin Yuan*</b>, Minshi Chen, Yi Yin, Xin Xu.<br>
+            NPFML: Non-isotropic Potential Fields with Hierarchical Decay for Deep Metric Learning.<br>
+            <i>Proceedings of the International Conference on Multimedia Modeling (<b>MMM'26</b>)</i>, <b>Accepted</b></i>, 2025.<br>
+    </p></li>
+	<li><p style="margin:15px 0">
             Xuan Jiang, <b>Xin Yuan*</b>, Xiaolan Yang.<br>
             Multi-Aligned and Multi-Scale Augmentation for Occluded Person Re-identification.<br>
             <i>Sensors</i>, <b>Accepted</b></i>, 2025.<br>
