Add new publication entries to research.html

--- a/research.html
+++ b/research.html
@@ -42,6 +42,16 @@ Application of learning algorithms in object re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+            Xiyu Zhu, Wei Wang, <b>Xin Yuan</b>, Xiao Wang.<br>
+            SLCFormer: Spectral-Local Context Transformer with Physics-Grounded Flare Synthesis for Nighttime Flare Removal.<br>
+            <i>Proceedings of the AAAI Conference on Artificial Intelligence (<b>AAAI'26</b>)</i>, <b>Accepted</b></i>, 2026.<br>
+    </p></li>
+	<li><p style="margin:15px 0">
+            Hua Chang, Xin Xu, Wei Liu, Wei Wang, <b>Xin Yuan</b>, Kui Jiang.<br>
+            MambaOVSR: Multiscale Fusion with Global Motion Modeling for Chinese Opera Video Super-Resolution.<br>
+            <i>Proceedings of the AAAI Conference on Artificial Intelligence (<b>AAAI'26</b>)</i>, <b>Accepted</b></i>, 2026.<br>
+    </p></li>
+	<li><p style="margin:15px 0">
             Shuai Li, <b>Xin Yuan*</b>, Minshi Chen, Yi Yin, Xin Xu.<br>
             NPFML: Non-isotropic Potential Fields with Hierarchical Decay for Deep Metric Learning.<br>
             <i>Proceedings of the International Conference on Multimedia Modeling (<b>MMM'26</b>)</i>, <b>Accepted</b></i>, 2025.<br>
