--- a/services.html
+++ b/services.html
@@ -87,6 +87,7 @@
 		        <li><p> Information Sciences (INS) </p></li>
 		        <li><p> Scientific Reports (Sci Rep) </p></li>
 		        <li><p> Displays </p></li> 
+			    <li><p> IEEE Signal Processing Letters (IEEE SPL) </p></li> 
 		        <li><p> IEEE Geoscience and Remote Sensing Letters (IEEE GRSL) </p></li> 
 		        <li><p> Journal of Visual Communication and Image Representation (JVCI) </p></li>
 			    <li><p> International Journal for Numerical Methods in Engineering </p></li>
