--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Before my Ph.D. study, I received my B.E. degree from School of Computer Science
 <div>
         <h2><hr><a name="news"></a>Top News</h2>
         <ul>
+		   <li><p>[Dec 2025] Invited to serve as a program committee member for ICIC'26. </p></li>
 		   <li><p>[Nov 2025] Invited to serve as an expert reviewer for IEEE SPL. </p></li>
 		   <li><p>[Nov 2025] Two paper was accepted by AAAI'26. </p></li>
 		   <li><p>[Oct 2025] One paper was accepted for MMM'26. </p></li>
