--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Dec 2025] Invited to serve as a program committee member for ICIC'26. </p></li>
 		   <li><p>[Nov 2025] Invited to serve as an expert reviewer for IEEE SPL. </p></li>
 		   <li><p>[Nov 2025] Two paper was accepted by AAAI'26. </p></li>
 		   <li><p>[Oct 2025] One paper was accepted for MMM'26. </p></li>
