--- a/services.html
+++ b/services.html
@@ -61,6 +61,7 @@
 		        <li><p> ACM International Conference on Multimedia (ACM MM): 2024, 2025 </p></li>
 		        <li><p> International Joint Conference on Artificial Intelligence (IJCAI): 2025 </p></li>
 		        <li><p> IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP): 2025 </p></li>
+			    <li><p> ACM International Conference on Multimedia Retrieval (ICMR): 2026 </p></li>
 		        <li><p> Chinese Conference on Pattern Recognition and Computer Vision (PRCV): 2025 </p></li> 
 		        <li><p> International Joint Conference on Neural Networks (IJCNN): 2025 </p></li>
 		        <li><p> International Conference on Artificial Intelligence and Statistics (AISTATS): 2025, 2026 </p></li>
