--- a/research.html
+++ b/research.html
@@ -42,6 +42,11 @@ Application of learning algorithms in object re-identification, image retrieval,
     <p>(* Corresponding author; † Equal contribution)</p>
     <ul>
 	<li><p style="margin:15px 0">
+            Haoyu Wang, Wei Wang, Xiao Wang, <b>Xin Yuan</b>, Xin Xu.<br>
+            Dual-Field Recovery and Distortion Correct for Ultra-High-Definition Image Demoiré.<br>
+            <i>Proceedings of the International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD'26</b>)</i>, <b>Accepted</b></i>, 2026.<br>
+    </p></li>
+	<li><p style="margin:15px 0">
             Xiyu Zhu, Wei Wang, <b>Xin Yuan</b>, Xiao Wang.<br>
             SLCFormer: Spectral-Local Context Transformer with Physics-Grounded Flare Synthesis for Nighttime Flare Removal.<br>
             <i>Proceedings of the AAAI Conference on Artificial Intelligence (<b>AAAI'26</b>)</i>, <b>Accepted</b></i>, 2026.<br>
