Add news item for ICIP'26 program committee<li><p>[Feb 2026] Invited to serve as a program committee member for ICIP'26. </p></li>

--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
 	<div>
         <ul>
+		   <li><p>[Feb 2026] Invited to serve as a program committee member for ICIP'26. </p></li>
 		   <li><p>[Feb 2026] One paper was accepted by CSCWD'26. </p></li>
 		   <li><p>[Jan 2026] Invited to serve as a program committee member for ICMR'26. </p></li>
 		   <li><p>[Dec 2025] Invited to serve as a program committee member for ICIC'26. </p></li>
