--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
 		        <li><p> International Joint Conference on Neural Networks (IJCNN): 2025 </p></li>
 		        <li><p> International Conference on Artificial Intelligence and Statistics (AISTATS): 2025, 2026 </p></li>
 			    <li><p> International Conference on Multimedia Modeling (MMM): 2026 </p></li>
-		        <li><p> International Conference on Image Processing (ICIP): 2025 </p></li>
+		        <li><p> International Conference on Image Processing (ICIP): 2025, 2026 </p></li>
 		        <li><p> IEEE International Conference on Systems, Man, and Cybernetics (SMC): 2025 </p></li>
 		        <li><p> International Conference on Intelligent Computing (ICIC): 2025, 2026 </p></li>
 		        <li><p> IEEE International Conference on Image Processing Workshop (ICIPW): 2024 </p></li>
