--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
 		        <li><p> International Conference on Learning Representations (ICLR): 2025, 2026 </p></li>
 		        <li><p> Annual Conference on Neural Information Processing Systems (NeurIPS): 2024, 2025 </p></li>
 			    <li><p> AAAI Conference on Artificial Intelligence (AAAI): 2023, 2024, 2025, 2026 </p></li>
-		        <li><p> ACM International Conference on Multimedia (ACM MM): 2024, 2025 </p></li>
+		        <li><p> ACM International Conference on Multimedia (ACM MM): 2024, 2025, 2026 </p></li>
 		        <li><p> International Joint Conference on Artificial Intelligence (IJCAI): 2025 </p></li>
 		        <li><p> IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP): 2025 </p></li>
 			    <li><p> ACM International Conference on Multimedia Retrieval (ICMR): 2026 </p></li>
